# osm-to-bedrock

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  docker-entrypoint.sh  gallery.html  hackernews_release.md  reddit_release.md
.githooks/: pre-commit
.github/workflows/: ci.yml  release.yml
docs/: ARCHITECTURE.md  CLI.md  DEVELOPER_INFO.md  MINECRAFT_BEDROCK_MAP_FORMAT.md  MINECRAFT_BEDROCK_TOOLS_AND_IMPORT.md  README.md  WEB_UI.md
src/: bedrock.rs  blocks.rs  config.rs  convert.rs  geojson_export.rs  geometry.rs  lib.rs  main.rs  metadata.rs  nbt.rs  osm.rs  osm_cache.rs  overpass.rs  overture.rs  params.rs  pipeline.rs  server.rs  sign.rs  spatial.rs  srtm.rs
web/: CLAUDE.md  README.md  eslint.config.mjs  next.config.ts  package.json
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/app/api/cache/: route.ts
web/src/app/api/convert/: route.ts
web/src/app/api/download/: route.ts
web/src/app/api/fetch-block-preview/: route.ts
web/src/app/api/fetch-convert/: route.ts
web/src/components/: ConversionControls.tsx  ConversionParametersForm.tsx  DataSourcePanel.tsx  DownloadProgress.tsx  ExportPanel.tsx  FeatureInspector.tsx  HistoryPanel.tsx  LayerPanel.tsx  MapLegend.tsx  MapView.tsx  SearchBar.tsx  ShortcutHelp.tsx  Sidebar.tsx  ThreePreview.tsx
web/src/hooks/: useConversion.ts  useConversionHistory.ts  useKeyboardShortcuts.ts  useMap.ts  useMediaQuery.ts  usePreview.ts  useTheme.ts
web/src/lib/: api-config.ts  api.ts  blockColors.ts  geo.ts  overpass.ts  presets.ts
(+9 files in other folders)
