[package]
name = "osm_to_bedrock"
version = "0.1.0"
edition = "2024"
description = "Convert OpenStreetMap data to Minecraft Bedrock Edition worlds"
authors = ["Paul Robello <probello@gmail.com>"]
license = "MIT"

[lib]
name = "osm_to_bedrock"
path = "src/lib.rs"

[[bin]]
name = "osm-to-bedrock"
path = "src/main.rs"

[dependencies]
clap = { version = "4.6.0", features = ["derive"] }
anyhow = "1.0.102"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
osmpbf = "0.3.8"
rusty-leveldb = "4.0.1"
byteorder = "1.5.0"
flate2 = "1.1.9"
log = "0.4.29"
env_logger = "0.11.9"
geojson = "1.0.0"
axum = { version = "0.8.8", features = ["multipart"] }
tokio = { version = "1.50.0", features = ["full"] }
uuid = { version = "1.22.0", features = ["v4"] }
tower-http = { version = "0.6.8", features = ["cors"] }
tempfile = "3.27.0"
zip = "8"
quick-xml = "0.37"
reqwest = { version = "0.12", features = ["blocking"] }
urlencoding = "2.1.3"
rayon = "1.10"
memmap2 = "0.9"
sha2 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
serde_yaml_ng = "0.10"
notify = "8"
